// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorToast matches snapshot with className prop 1`] = `
Object {
  "instance": null,
  "nodeType": "component",
  "props": Object {
    "className": "testClassName",
    "text": "ErrorToast Message",
  },
  "rendered": Object {
    "instance": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="flexbox"
      >
        <ForwardRef(ExclamationCircleIcon)
          className="icon"
          color="white"
          width={30}
        />
        <p
          className="text"
        >
          ErrorToast Message
        </p>
      </div>,
      "className": "testClassName container",
    },
    "rendered": Array [
      Object {
        "instance": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ForwardRef(ExclamationCircleIcon)
              className="icon"
              color="white"
              width={30}
            />,
            <p
              className="text"
            >
              ErrorToast Message
            </p>,
          ],
          "className": "flexbox",
        },
        "rendered": Array [
          Object {
            "instance": null,
            "nodeType": "host",
            "props": Object {
              "aria-hidden": "true",
              "children": <path
                clipRule="evenodd"
                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z"
                fillRule="evenodd"
              />,
              "className": "icon",
              "color": "white",
              "fill": "currentColor",
              "viewBox": "0 0 20 20",
              "width": 30,
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "rendered": Array [
              Object {
                "instance": null,
                "nodeType": "host",
                "props": Object {
                  "clipRule": "evenodd",
                  "d": "M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z",
                  "fillRule": "evenodd",
                },
                "rendered": Array [],
                "type": "path",
              },
            ],
            "type": "svg",
          },
          Object {
            "instance": null,
            "nodeType": "host",
            "props": Object {
              "children": "ErrorToast Message",
              "className": "text",
            },
            "rendered": Array [
              "ErrorToast Message",
            ],
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  "type": [Function],
}
`;

exports[`ErrorToast matches snapshot with no className prop 1`] = `
Object {
  "instance": null,
  "nodeType": "component",
  "props": Object {
    "className": "",
    "text": "ErrorToast Message",
  },
  "rendered": Object {
    "instance": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="flexbox"
      >
        <ForwardRef(ExclamationCircleIcon)
          className="icon"
          color="white"
          width={30}
        />
        <p
          className="text"
        >
          ErrorToast Message
        </p>
      </div>,
      "className": " container",
    },
    "rendered": Array [
      Object {
        "instance": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ForwardRef(ExclamationCircleIcon)
              className="icon"
              color="white"
              width={30}
            />,
            <p
              className="text"
            >
              ErrorToast Message
            </p>,
          ],
          "className": "flexbox",
        },
        "rendered": Array [
          Object {
            "instance": null,
            "nodeType": "host",
            "props": Object {
              "aria-hidden": "true",
              "children": <path
                clipRule="evenodd"
                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z"
                fillRule="evenodd"
              />,
              "className": "icon",
              "color": "white",
              "fill": "currentColor",
              "viewBox": "0 0 20 20",
              "width": 30,
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "rendered": Array [
              Object {
                "instance": null,
                "nodeType": "host",
                "props": Object {
                  "clipRule": "evenodd",
                  "d": "M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z",
                  "fillRule": "evenodd",
                },
                "rendered": Array [],
                "type": "path",
              },
            ],
            "type": "svg",
          },
          Object {
            "instance": null,
            "nodeType": "host",
            "props": Object {
              "children": "ErrorToast Message",
              "className": "text",
            },
            "rendered": Array [
              "ErrorToast Message",
            ],
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  "type": [Function],
}
`;
